# pcl_classification

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
classification/: __init__.py
classification/data_utils/: modelnet_dataset.py
classification/engine/: train_engine.py
classification/models/: orion.py  pointnet.py  voxnet.py
classification/utils/: logging.py  losses.py  pcl_transforms.py
configs/modelnet10/: orion.ymal  pointnet.ymal
configs/modelnet40/: orion.ymal  pointnet.ymal
notebooks/: 1_data_exploration.ipynb
scripts/: download_modelnet.py  modelnet40_flat_object_removal.py  orion_data_preparation.py  pointnet_data_preparation.py  train_orion.py  train_pointnet.py  train_voxnet.py
