[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pointcloud_classification_models"
version = "0.0.1"
description = "Implementing different pointcloud classification models."
authors = [
  { name = "Mehrnaz Hn" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["pointcloud_classification_models"]
include = ["pyproject.toml", "pointcloud_classification_models/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pointcloud_classification_models"]
force-sort-within-sections = true

